5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1637_2703.log
== TEST (2019-04-04 13:13:30) 
-- CODE:
i= int(input(" qual sua idade?: "))
if i>=18:
	msg=eleitor
else:
	msg=nao_leitor
print(msg.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    msg=nao_leitor
NameError: name 'nao_leitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:13:51) 
-- CODE:
i= int(input(" qual sua idade?: "))
if i>=18:
	msg=eleitor
if i<18:
	msg=nao_leitor
print(msg.lower())
-- EXECUTION TIME:
0.195616
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2703/main.py", line 5, in <module>
    msg=nao_leitor
NameError: name 'nao_leitor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:13:59) 
-- CODE:
i= int(input(" qual sua idade?: "))
if i>=18:
	msg=eleitor
if i<18:
	msg=nao_leitor
print(msg.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    msg=nao_leitor
NameError: name 'nao_leitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:14:31) 
-- CODE:
i= int(input(" qual sua idade?: "))
if i>=18:
	msg="eleitor"
if i<18:
	msg="nao_leitor"
print(msg.lower())
-- EXECUTION TIME:
0.257173
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_leitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:14:31) 
-- CODE:
i= int(input(" qual sua idade?: "))
if i>=18:
	msg="eleitor"
if i<18:
	msg="nao_leitor"
print(msg.lower())
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:15:42) 
-- CODE:
i= int(input("qual sua idade?: "))
if i>=18:
	msg="eleitor"
if i<18:
	msg="nao_leitor"
print(msg.lower())

-- EXECUTION TIME:
0.125826
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_leitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:15:43) 
-- CODE:
i= int(input("qual sua idade?: "))
if i>=18:
	msg="eleitor"
if i<18:
	msg="nao_leitor"
print(msg.lower())

-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:16:32) 
-- CODE:
i= int(input("qual sua idade?: "))
if i>=18:
	msg="eleitor"
if i<18:
	msg="nao_eleitor"
print(msg.lower())

-- EXECUTION TIME:
0.237626
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:31:50) 
-- CODE:
i= int(input("qual sua idade?: "))
if i>=18:
	msg="eleitor"
if i<18:
	msg="nao_eleitor"
print(msg.lower())

-- EXECUTION TIME:
0.159276
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
